Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.4.18 - unreleased

	Drew
	- add .qmail-extension ability to vdelivermail
	- mods to Delivered-To: header to support .qmail-extension

	John Simpson
	- onchange - call a script when users or domains are changed
          see README.onchange.
        - cslogin - Compact and silent login options for vpopmaild
          note: don't blame John for problems in this, I changed a
          lot to make it fit with other changes. rww

	Tijs Zwinkels
	- vmysql: add missing mysql_free_result to fix mem leak.

	Tom Collins
	- vdelivermail: Add missing loop check.
	- vchangepw: Minor changes to Peter's error checking. [1573277]

	Rick Widmer
	- Multiple changes to vpopmaild:
	  Add rename_file command.
	  Expert mode works in vmoduser.     
	  Commands that are not yet implemented say so.
	  Blank input lines are not an error in vpopmaild.
	  Separate help before and after login in vpopmaild.
	  Allow 3 tries to login to vpopmaild.
	  Clean up if add_user fails because of bad user data.
	  Add termination code (.) to get_lastauth return.
	  Number the error messages (XXX) in vpopmaild
	  If invalid option is sent in set_limits, show warning
	- Add various patches from others listed below:

	Peter Pentchev (roamer)
	- Various sanity checks and minor optimizations [1573292]
	- Fix child handling - waitpid and sys/wait.h [1573288]
	- Dynamicallly allocate sortdata[] in vpopmail.c [1573287]
	- Include ctype.h in the PostgreSQL backend [1573284]
	- Set SHELL in vdelivermail before executing external programs [1573280]
	- Some more error checking in vchangepw [1573277]
	- Improve the vpopmaild documentation [1573269]
	- Clean cdb files in the distclean target [1573267]
	- Optional building as non-root [1573266]

	Trent Lloyd (lathiat)
	- Add vailas add/delete/list support to vpopmaild [1555398]